# linux-sgx

SampleCode/LocalAttestationNinja/: Makefile  buildenv.mk  meson.build  meson_options.txt
SampleCode/LocalAttestationNinja/App/: meson.build
SampleCode/LocalAttestationNinja/AppInitiator/: meson.build
SampleCode/LocalAttestationNinja/AppResponder/: meson.build
SampleCode/LocalAttestationNinja/EnclaveInitiator/: Makefile  meson.build
SampleCode/LocalAttestationNinja/EnclaveResponder/: Makefile  meson.build
